it includes html page and images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         this is my first web page
     </title>
     </head>
+   
+    <a href="aboutus.html">aboutus</a>
+    
     <body>
+        <img src="img.jpg"width="500"height="500" alt="image">
    <h1>
     in the name of Allah
    </h1> 
