--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
-<html>
-    <head>
-    <title>
-        this is my first web page
-    </title>
-    </head>
-   
-    <a href="aboutus.html">aboutus</a>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     
-    <body>
-        <img src="img.jpg"width="500"height="500" alt="image">
-   <h1>
-    in the name of Allah
-   </h1> 
-   <p>
-    some text goes here 
-   </p>   
-<ul>
-    <li>item 1</li>
-    <li>item 2</li>
-</ul>
-   
-</ol>
-        <li>item1</li>
-        <li>item 2</li>
-     </ol>
-
-   
-    </body>
+</body>
+<script>
+ const greet=()=>{
+    console.log("hello ,Ayesha!Welcome back")
+ }
+const show=greet
+show();
+</script>
 </html>
